--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
         <!-- STEP 03 -->
         <div class="steps-text-box">
           <p class="step-number">03</p>
-          <h3 class="heading-tertiary">Receive meals at convenient time</h3>
+          <h3 class="heading-tertiary">Analyse the result</h3>
           <p class="step-description">
-            Best chefs in town will cook your selected meal every day, and we
-            will deliver it to your door whenever works best for you. You can
-            change delivery schedule and address daily!
+            After putting in the values the resultant footprint is calculated
+            and further measures can be taken to reduce your footprint if it
+            crosses the threshold.
           </p>
         </div>
         <div class="steps-img-box">
